fixed FLL teams and event info

--- a/fll-regional.html
+++ b/fll-regional.html
@@ -1,8 +1,8 @@
 ---
 layout: event-image
 title: "Purdue FLL Qualifier"
-event-date: "November 12"
-event-year: "2016"
+event-date: "November 18"
+event-year: "2017"
 location-ntrl: "McCutcheon High School"
 location: "4951 US-231 Lafayette, IN 47909"
 image: "fll-2015.jpg"
@@ -15,7 +15,7 @@ dark: true
 		<h1>About</h1>
 		<hr />
 		<p>
-			FIRST Lego League is a robotics competition for 3rd-5th graders. Each year, FLL releases a challenge modeled after a real problem in the world. Each FLL team designs a robot, completes a project, all while promoting FIRST core values. This year’s FLL challenge is Animal AlliesSM. The challenge is about improving interactions between animals and humans. Teams design innovative solutions to not only the tasks on the field but problems in interactions between animals and humans. They will practice both engineering in their robot build as well as research and problem solving in their project. Teams also continually practice the core values of FIRST throughout the season, from building their robots to competing at events. Purdue FIRST Programs is proud to host the Purdue University FLL Qualifying Tournament with 27 teams competing at McCutcheon High School.
+    FIRST Lego League is a robotics competition for 3rd-5th graders. Each year, FLL releases a challenge modeled after a real problem in the world. Each FLL team designs a robot, completes a project, all while promoting FIRST core values. This year’s FLL challenge is Hydro Dynamics. The challenge is about water - finding, using, transporting and disposing it. Teams design innovative solutions to not only the tasks on the field but problems faced by engineers and scientists in the real world. They will practice both engineering in their robot build as well as research and problem solving in their project. Teams also continually practice the core values of FIRST throughout the season, from building their robots to competing at events. Purdue FIRST Programs is proud to host the Purdue University FLL Qualifying Tournament with 32 teams competing at McCutcheon High School.
 		</p>
 	</div>
 </section>
