--- a/fll-regional.html
+++ b/fll-regional.html
@@ -99,7 +99,7 @@ dark: true
 		<hr />
 		<br />
 		<div class="center">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12163.223949308467!2d-86.90120602000525!3d40.34664967689765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb389d3e9a9559a9a!2sMcCutcheon+High+School!5e0!3m2!1sen!2sus!4v1509918399722" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+    	<iframe src="https://www.google.com/maps/embed/v1/place?q=4951+US-231,+Lafayette,+IN+47909&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 	</div>
 </section>
