--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -37,22 +37,26 @@ dark: true
 
         <b>Friday November 10th</b>
         <br />
-        3:00-6:00pm Venue open for robot load in and practice rounds
+        3:00-8:00pm Venue open for robot load in and practice rounds
         <br />
         6:00pm-10:00pm Team Social
         <br />
         <b>Saturday, November 11th</b>
         <br />
+        7:15am Doors Open
+        <br />
         8:00-8:30am Opening Ceremonies
         <br />
-        8:30-11:30am Qualification Matches
+        8:30-12:00am Qualification Matches
         <br />
         <br />
-        11:30am-1:00pm Lunch
+        12:00am-1:00pm Lunch
         <br />
-        1:00-1:30pm Alliance Selection
+        1:00-2:30pm Qualification Matches
         <br />
-        1:40-5:30pm Elimination Matches
+        2:30-3:00pm Alliance Selection
+        <br />
+        3:00-5:30pm Elimination Matches
         <br />
         6:00pm-6:45pm Awards and Closing Ceremonies
         
