added team list

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -79,6 +79,46 @@ dark: true
         </div>
     </div>
 </section>   
+
+
+<section id="teams" class="primary-section">
+<div class="container">
+        <h1>Teams</h1>
+        <hr />
+        <br />
+  <table>
+    <tr><td>81</td><td>Metalheads</td></tr>
+    <tr><td>135*</td><td>Penn Robotics</td></tr>
+    <tr><td>234*</td><td>Cyber Blue</td></tr>
+    <tr><td>292</td><td>PantherTech</td></tr>
+    <tr><td>461</td><td>Westside Boiler Invasion</td></tr>
+    <tr><td>868</td><td>TechHounds</td></tr>
+    <tr><td>1646</td><td>Precision Guessworks</td></tr>
+    <tr><td>1747</td><td>Harrison Boiler Robotics</td></tr>
+    <tr><td>1781</td><td>Electric Eagles</td></tr>
+    <tr><td>2171</td><td>CP Robodogs</td></tr>
+    <tr><td>2197*</td><td>Las Pumas</td></tr>
+    <tr><td>3487</td><td>Red Pride Robotics</td></tr>
+    <tr><td>3814</td><td>PiBotics</td></tr>
+    <tr><td>3865</td><td>Riley Wildbots</td></tr>
+    <tr><td>3940</td><td>Cybertooth</td></tr>
+    <tr><td>4028</td><td>Beak Squad</td></tr>
+    <tr><td>4103</td><td>The Robotioles</td></tr>
+    <tr><td>4272*</td><td>Maverick Boiler Robotics</td></tr>
+    <tr><td>4284</td><td>Scotbot</td></tr>
+    <tr><td>4485*</td><td>Tribe Tech Robotics</td></tr>
+    <tr><td>4926*</td><td>Galactech</td></tr>
+    <tr><td>5484</td><td>Career Academy SB</td></tr>
+    <tr><td>5822</td><td>WolfByte</td></tr>
+    <tr><td>6451</td><td>Wired Warriors</td></tr>
+    <tr><td>6721</td><td>Tindley Trailblazers</td></tr>
+    <tr><td>6956</td><td>SHAM-ROCK-BOTICS</td></tr>
+  </table>
+
+  <p>* denotes team bringing a second robot</p>
+    </div>
+</section>   
+
 <section id="location" class="primary-section">
     <div class="container">
         <h1>Location</h1>
