--- a/frc-kickoff.html
+++ b/frc-kickoff.html
@@ -10,56 +10,60 @@ contact: "president@purduefirst.org"
 dark: true
 ---
 <section id="about" class="primary-section">
-	<div class="container">
-		<h1>About</h1>
-		<hr />
+  <div class="container">
+    <h1>About</h1>
+    <hr />
     <p>
-      FRC Kickoff marks the beginning of the design and build season for High School students involved in FIRST. At this event, teams will the challenge and rules for the 2018 game at Purdue University's new Wilmeth Active Learning Center. 
+    FRC Kickoff marks the beginning of the design and build season for High School students involved in FIRST. At this event, teams will the challenge and rules for the 2018 game at Purdue University's new Wilmeth Active Learning Center. 
     </p>
-	</div>
+  </div>
 </section>
 <section id="schedule" class="primary-section">
-	<div class="container">
-		<h1>Agenda</h1>
-		<hr />
-		<div class="table-responsive">
-			<table class="table">
-				<tr>
-					<th>
-						Time
-					</th>
-					<th>
-						Event
-					</th>
-				</tr>
-				<tr>
-					<td>
-						10:30am-11:30am
-					</td>
-					<td>
-						Kick Off Video
-					</td>
-				</tr>
-				<tr>
-					<td>
-						12:00-12:30
-					</td>
-					<td>
-						Kit Distribution
-					</td>
-				</tr>
-			</table>
-		</div>
-	</div>
+  <div class="container">
+    <h1>Agenda</h1>
+    <hr />
+    <div class="table-responsive">
+      <table class="table">
+        <tr>
+          <th>
+            Time
+          </th>
+          <th>
+            Event
+          </th>
+        </tr>
+        <tr>
+          <td>9:00am</td>
+          <td>Doors Open</td>
+        </tr>
+        <tr>
+          <td>10:30am-11:30am</td>
+          <td>Kick Off Video</td>
+        </tr>
+        <tr>
+          <td>12:00-12:30</td>
+          <td>Kit of Parts Distribution</td>
+        </tr>
+      </table>
+    </div>
+  </div>
 </section>
 
 <section id="location" class="primary-section">
-	<div class="container">
-		<h1>Location</h1>
-		<hr />
-		<br />
-		<div class="center">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.163439038582!2d-86.9145353882768!3d40.42737972043634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2b26bc20d7f%3A0x9a9087b176e141c5!2sWilmeth+Active+Learning+Center!5e0!3m2!1sen!2sus!4v1509918966734" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-		</div>
-	</div>
+  <div class="container">
+    <h1>Location</h1>
+    <hr />
+    <div class="row">
+      <div class="col-md-6">
+        <div class="center">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.163439038582!2d-86.9145353882768!3d40.42737972043634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2b26bc20d7f%3A0x9a9087b176e141c5!2sWilmeth+Active+Learning+Center!5e0!3m2!1sen!2sus!4v1509918966734" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <h2>Transportation & Parking</h2>
+        <p><strong>Cars, Pickups, and Vans</strong> can park in either the Northwestern (504 Northwestern Avenue) or University (201 N University St) Parking Garage and walk to WALC.</p>
+        <p><strong>Buses</strong> can drop off and pick up on Memorial Mall.  Bus parking is in the large lot north of Ross-Ade stadium.  Brittany Ammerman (609-744-5955) will be available to shuttle ADULT DRIVERS back and forth from the bus parking area.</p>
+      </div>
+    </div>
+  </div>
 </section>
