kickoff map fix

--- a/frc-kickoff.html
+++ b/frc-kickoff.html
@@ -56,7 +56,7 @@ dark: true
     <div class="row">
       <div class="col-md-6">
         <div class="center">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.163439038582!2d-86.9145353882768!3d40.42737972043634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2b26bc20d7f%3A0x9a9087b176e141c5!2sWilmeth+Active+Learning+Center!5e0!3m2!1sen!2sus!4v1509918966734" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.163439038582!2d-86.9145353882768!3d40.42737972043634!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2b26bc20d7f%3A0x9a9087b176e141c5!2sWilmeth+Active+Learning+Center!5e0!3m2!1sen!2sus!4v1509918966734" width="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
       </div>
       <div class="col-md-6">
