--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -43,7 +43,7 @@ dark: true
         <br />
         <b>Saturday, November 11th</b>
         <br />
-        7:15am Doors Open
+        7:15am Doors OpenTest
         <br />
         8:00-8:30am Opening Ceremonies
         <br />
