--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@ dark: true
 	</div>
 </section>
 
+<section id="alum" class="primary-section">
+	<div class="container">
+		<h1>Interested in helping Purdue FIRST spread the message of FIRST?</h1>
+		<hr class="medium-hr">
+		<!--<br />-->
+		<p>Purdue FIRST is currently undertaking one of our largest fundraising efforts in our close to 20 year history! Please help support us or help by sharing the link to our fundraising page?</p>
+		<iframe src="https://www.crowdfunding.purdue.edu/PFP" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+	</div>
+</section>
+
 <section id="about" class="primary-section">
 	<div class="container">
 		<h1>About</h1>
