--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -2,9 +2,9 @@
 layout: event-image
 image: state-2016.jpg
 title: "Boiler Bot Battle"
-event-date: "November 10th-11th"
-event-year: "2017"
-location: " 812 3rd street, West Lafayette, IN 47906"
+event-date: "October 26th-27th"
+event-year: "2018"
+location: " 355 N Martin Jischke Dr, West Lafayette, IN 47906"
 link: https://www.eventreg.purdue.edu/conf/courselisting.aspx?1=%20&master_ID=5252%20&course_area=1096%20&course_number=301%20&course_subtitle=00 
 location-ntrl: "The Purdue Armory"
 contact: "boilerbotbattle@gmail.com"
@@ -35,13 +35,13 @@ dark: true
             <hr class="medium-hr thin" />
         <br />
 
-        <b>Friday November 10th</b>
+        <b>Friday November 26th</b>
         <br />
         3:00-8:00pm Venue open for robot load in and practice rounds
         <br />
         6:00pm-10:00pm Team Social
         <br />
-        <b>Saturday, November 11th</b>
+        <b>Saturday, November 27th</b>
         <br />
         7:15am Doors Open
         <br />
