--- a/fll-regional.html
+++ b/fll-regional.html
@@ -1,8 +1,8 @@
 ---
 layout: event-image
 title: "Purdue FLL Qualifier"
-event-date: "November 18"
-event-year: "2017"
+event-date: "November 10th or 17th"
+event-year: "2018"
 location-ntrl: "McCutcheon High School"
 location: "4951 US-231 Lafayette, IN 47909"
 image: "fll-2015.jpg"
