Updated some dates and removed social temporarily

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -17,7 +17,7 @@ dark: true
         <iframe id="ytplayer" type="text/html" width="640" height="390" src="https://www.youtube.com/embed/UemgTq5iEEQ" frameborder="0"></iframe>
         <br />
         <br />
-        Be a part of the second Boiler Bot Battle, hosted at Purdue University by Purdue FIRST Programs. Join us at the Purdue Armory on November 10th and 11th for robots, campus tours, social events, and much more. Check back to this page for frequent updates, and we hope to see you in November! <a href="http://eepurl.com/b7lG-H">.</a>
+        Be a part of the third annual Boiler Bot Battle, hosted at Purdue University by Purdue FIRST Programs. Join us at the Purdue Armory on October 26th and 27th for robots, campus tours, social events, and much more. Check back to this page for frequent updates, and we hope to see you in October!
 
     <br>
     <hr class="medium-hr thin" />
@@ -59,7 +59,7 @@ dark: true
         3:00-5:30pm Elimination Matches
         <br />
         6:00pm-6:45pm Awards and Closing Ceremonies
-        
+      <!--  
         <h2>Team Social</h2>
         <hr class="medium-hr thin" />
         <br />
@@ -80,7 +80,7 @@ dark: true
     </div>
 </section>   
 
-
+-->
 <section id="teams" class="primary-section">
 <div class="container">
         <h1>Teams</h1>
