More date changes and location update

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -6,7 +6,7 @@ event-date: "October 26th-27th"
 event-year: "2018"
 location: " 355 N Martin Jischke Dr, West Lafayette, IN 47906"
 link: https://www.eventreg.purdue.edu/conf/courselisting.aspx?1=%20&master_ID=5252%20&course_area=1096%20&course_number=301%20&course_subtitle=00 
-location-ntrl: "The Purdue Armory"
+location-ntrl: "France A. Córdova Recreational Sports Center"
 contact: "boilerbotbattle@gmail.com"
 dark: true
 ---
@@ -35,13 +35,13 @@ dark: true
             <hr class="medium-hr thin" />
         <br />
 
-        <b>Friday November 26th</b>
+        <b>Friday October 26th</b>
         <br />
         3:00-8:00pm Venue open for robot load in and practice rounds
         <br />
         6:00pm-10:00pm Team Social
         <br />
-        <b>Saturday, November 27th</b>
+        <b>Saturday, October 27th</b>
         <br />
         7:15am Doors Open
         <br />
