--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -125,7 +125,6 @@ dark: true
         <hr />
         <br />
         <div class="center">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.133840719084!2d-86.91844598495103!3d40.42803516287645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2b3990678b9%3A0x11dcd5ecb4889da9!2sArmory%2C+812+3rd+Street%2C+West+Lafayette%2C+IN+47907!5e0!3m2!1sen!2sus!4v1498579448341" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-        </div>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.1133787562394!2d-86.92455128460372!3d40.4284882793637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2ca7f76dcf3%3A0x3a6d7e1624033e2e!2sRecreational+Sports+Center%2C+355+N+Martin+Jischke+Dr%2C+West+Lafayette%2C+IN+47906!5e0!3m2!1sen!2sus!4v1532391483327" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>        </div>
     </div>
 </section>
