--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: big-image
 title: "Purdue FIRST Programs"
-mission-title: "Mission Statement"
-mission-summary: "Purdue FIRST Programs inspires in youth and their communities an appreciation of science and technology, while developing life skills, passion, and leadership through mentoring and hands-on activities that provide opportunities for personal growth."
+mission-title: "Want to Join Us?"
+mission-summary: "Come to our callouts on August 21st and August 23rd, 6PM - 8PM in WALC 1018! Free Pizza! Free Fun!"
 image: "crossroads-2014.jpg"
 contact: "president@purduefirst.org"
 dark: true
@@ -31,19 +31,20 @@ dark: true
 		<iframe src="https://www.crowdfunding.purdue.edu/PFP" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	</div>
 </section>
-
-<section id="about" class="primary-section">
-	<div class="container">
-		<h1>About</h1>
-		<hr class="medium-hr">
-		<br>
-		<br>
-		<br>
-		<p>Purdue FIRST Programs (PFP) is a student organization and class that is based at Purdue University in West Lafayette, Indiana. It is a group composed of approximately 90 students who work together to support the mission and vision of FIRST, primarily through mentoring students in the surrounding Lafayette and West Lafayette communities.</p>
-		<p>Currently, Purdue FIRST Programs supports almost 30 elementary and middle school FIRST Lego League and FIRST Tech Chanllenge teams and 4 FIRST Robotic Competition teams. Purdue FIRST Programs also holds a fall qualifying tournament for FIRST Lego League with a FIRST Tech Challenge competition, a spring competition for FIRST Lego League teams, and an offseason competition for FRC teams. In addition, PFP also participates in outreach events throughout the year on campus and in the community.</p>
-	</div>
-</section>
-
+	<!--
+		<section id="about" class="primary-section">
+			<div class="container">
+				<h1>About</h1>
+				<hr class="medium-hr">
+				<br>
+				<br>
+				<br>
+				<p>Purdue FIRST Programs (PFP) is a student organization and class that is based at Purdue University in West Lafayette, Indiana. It is a group composed of approximately 90 students who work together to support the mission and vision of FIRST, primarily through mentoring students in the surrounding Lafayette and West Lafayette communities.</p>
+				<p>Currently, Purdue FIRST Programs supports almost 30 elementary and middle school FIRST Lego League and FIRST Tech Chanllenge teams and 4 FIRST Robotic Competition teams. Purdue FIRST Programs also holds a fall qualifying tournament for FIRST Lego League with a FIRST Tech Challenge competition, a spring competition for FIRST Lego League teams, and an offseason competition for FRC teams. In addition, PFP also participates in outreach events throughout the year on campus and in the community.</p>
+				<p>Purdue FIRST Programs inspires in youth and their communities an appreciation of science and technology, while developing life skills, passion, and leadership through mentoring and hands-on activities that provide opportunities for personal growth.</p>
+			</div>
+		</section>
+	-->
 <section id="our-teams" class="primary-section">
 	<div class="container">
 		<h1>Leadership Class</h1>
