--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -83,7 +83,7 @@ dark: true
 -->
 <section id="teams" class="primary-section">
 <div class="container">
-        <h1>Teams</h1>
+        <h1>2017 Teams</h1>
         <hr />
         <br />
   <table>
