--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -5,7 +5,7 @@ title: "Boiler Bot Battle"
 event-date: "October 26th-27th"
 event-year: "2018"
 location: " 355 N Martin Jischke Dr, West Lafayette, IN 47906"
-link: https://www.eventreg.purdue.edu/conf/courselisting.aspx?1=%20&master_ID=5252%20&course_area=1096%20&course_number=301%20&course_subtitle=00 
+link: https://goo.gl/forms/QVTVVZy5Yj8joBq83
 location-ntrl: "France A. Córdova Recreational Sports Center"
 contact: "boilerbotbattle@gmail.com"
 dark: true
