--- a/fll-regional.html
+++ b/fll-regional.html
@@ -1,10 +1,10 @@
 ---
 layout: event-image
 title: "Purdue FLL Qualifier"
-event-date: "November 10th or 17th"
+event-date: "November 17th"
 event-year: "2018"
-location-ntrl: "McCutcheon High School"
-location: "4951 US-231 Lafayette, IN 47909"
+location-ntrl: "East Tipp Middle School"
+location: "7501 E 300 N Lafayette, IN 47905 USA"
 image: "fll-2015.jpg"
 contact: "president@purduefirst.org"
 link: "http://www.conf.purdue.edu/FLL"
@@ -15,10 +15,11 @@ dark: true
 		<h1>About</h1>
 		<hr />
 		<p>
-    FIRST Lego League is a robotics competition for 3rd-5th graders. Each year, FLL releases a challenge modeled after a real problem in the world. Each FLL team designs a robot, completes a project, all while promoting FIRST core values. This year’s FLL challenge is Hydro Dynamics. The challenge is about water - finding, using, transporting and disposing it. Teams design innovative solutions to not only the tasks on the field but problems faced by engineers and scientists in the real world. They will practice both engineering in their robot build as well as research and problem solving in their project. Teams also continually practice the core values of FIRST throughout the season, from building their robots to competing at events. Purdue FIRST Programs is proud to host the Purdue University FLL Qualifying Tournament with 32 teams competing at McCutcheon High School.
+    FIRST Lego League is a robotics competition for 3rd-5th graders. Each year, FLL releases a challenge modeled after a real problem in the world. Each FLL team designs a robot, completes a project, all while promoting FIRST core values. This year’s FLL challenge is INTO ORBIT. Join students as they prepare for blast off, break out of their eartly constraints, and innovate in the vast expanse of space. Teams design innovative solutions to not only the tasks on the field but problems faced by engineers and scientists in the real world. They will practice both engineering in their robot build as well as research and problem solving in their project. Teams also continually practice the core values of FIRST throughout the season, from building their robots to competing at events. Purdue FIRST Programs is proud to host the Purdue University FLL Qualifying Tournament.
 		</p>
 	</div>
 </section>
+<!--
 <section id="schedule" class="primary-section">
 	<div class="container">
 		<h1>Agenda</h1>
@@ -93,6 +94,7 @@ dark: true
 		</div>
 	</div>
 </section>
+-->
 <section id="location" class="primary-section">
 	<div class="container">
 		<h1>Location</h1>
@@ -102,6 +104,7 @@ dark: true
     	<iframe src="https://www.google.com/maps/embed/v1/place?q=4951+US-231,+Lafayette,+IN+47909&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 	</div>
+	<!--
 </section>
 <section id="lunch" class="primary-section">
 	<div class="container">
@@ -119,3 +122,4 @@ dark: true
 		Coming soon
 	</div>
 </section>
+-->
