--- a/fll-regional.html
+++ b/fll-regional.html
@@ -101,7 +101,7 @@ dark: true
 		<hr />
 		<br />
 		<div class="center">
-    	<iframe src="https://www.google.com/maps/embed/v1/place?q=4951+US-231,+Lafayette,+IN+47909&key=AIzaSyAN0om9mFmy1QN6Wf54tXAowK4eT0ZUPrU" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
+    	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3035.6829676406937!2d-86.76422658526246!3d40.460153360922526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88130573ab24349d%3A0xdf59ef5dc7daa5a4!2sEast+Tipp+Middle+School!5e0!3m2!1sen!2sus!4v1537030351249" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 	</div>
 	<!--
