--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -17,7 +17,7 @@ dark: true
         <iframe id="ytplayer" type="text/html" width="640" height="390" src="https://www.youtube.com/embed/UemgTq5iEEQ" frameborder="0"></iframe>
         <br />
         <br />
-        Be a part of the third annual Boiler Bot Battle, hosted at Purdue University by Purdue FIRST Programs. Join us at the Purdue Armory on October 26th and 27th for robots, campus tours, social events, and much more. Check back to this page for frequent updates, and we hope to see you in October!
+        Be a part of the third annual Boiler Bot Battle, hosted at Purdue University by Purdue FIRST Programs. Join us at the Purdue Corec on October 26th and 27th for robots, campus tours, social events, and much more. Check back to this page for frequent updates, and we hope to see you in October!
 
     <br>
     <hr class="medium-hr thin" />
