2018 Updated Team List

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -83,39 +83,42 @@ dark: true
 -->
 <section id="teams" class="primary-section">
 <div class="container">
-        <h1>2017 Teams</h1>
+        <h1>2018 Teams</h1>
         <hr />
         <br />
-  <table>
-    <tr><td>81</td><td>Metalheads</td></tr>
-    <tr><td>135*</td><td>Penn Robotics</td></tr>
-    <tr><td>234*</td><td>Cyber Blue</td></tr>
-    <tr><td>292</td><td>PantherTech</td></tr>
-    <tr><td>461</td><td>Westside Boiler Invasion</td></tr>
-    <tr><td>868</td><td>TechHounds</td></tr>
-    <tr><td>1646</td><td>Precision Guessworks</td></tr>
-    <tr><td>1747</td><td>Harrison Boiler Robotics</td></tr>
-    <tr><td>1781</td><td>Electric Eagles</td></tr>
-    <tr><td>2171</td><td>CP Robodogs</td></tr>
-    <tr><td>2197*</td><td>Las Pumas</td></tr>
-    <tr><td>3487</td><td>Red Pride Robotics</td></tr>
-    <tr><td>3814</td><td>PiBotics</td></tr>
-    <tr><td>3865</td><td>Riley Wildbots</td></tr>
-    <tr><td>3940</td><td>Cybertooth</td></tr>
-    <tr><td>4028</td><td>Beak Squad</td></tr>
-    <tr><td>4103</td><td>The Robotioles</td></tr>
-    <tr><td>4272*</td><td>Maverick Boiler Robotics</td></tr>
-    <tr><td>4284</td><td>Scotbot</td></tr>
-    <tr><td>4485*</td><td>Tribe Tech Robotics</td></tr>
-    <tr><td>4926*</td><td>Galactech</td></tr>
-    <tr><td>5484</td><td>Career Academy SB</td></tr>
-    <tr><td>5822</td><td>WolfByte</td></tr>
-    <tr><td>6451</td><td>Wired Warriors</td></tr>
-    <tr><td>6721</td><td>Tindley Trailblazers</td></tr>
-    <tr><td>6956</td><td>SHAM-ROCK-BOTICS</td></tr>
-  </table>
+		
+	  <table class="tableizer-table">
+	<thead><tr class="tableizer-firstrow"><th>Team Name</th><th>Team Number</th><th>Location</th></tr></thead><tbody>
+	 <tr><td>Penn Robotics</td><td>135</td><td>Mishawaka, IN</td></tr>
+	 <tr><td>Cyber Blue</td><td>234</td><td>Indianapolis, IN</td></tr>
+	 <tr><td>PantherTech</td><td>292</td><td>Russiaville, IN</td></tr>
+	 <tr><td>Westside Boiler Invasion</td><td>461</td><td>West Lafayette, IN</td></tr>
+	 <tr><td>TechHOUNDS</td><td>868</td><td>Carmel, IN</td></tr>
+	 <tr><td>Precision Guessworks</td><td>1646</td><td>Lafayette, IN</td></tr>
+	 <tr><td>Chicago Knights</td><td>1739</td><td>Chicago, IL</td></tr>
+	 <tr><td>Harrison Boiler Robotics</td><td>1747</td><td>West Lafayette, IN</td></tr>
+	 <tr><td>Electric Eagles</td><td>1781</td><td>Chicago, IL</td></tr>
+	 <tr><td>Las Pumas</td><td>2197</td><td>New Carlisle, IN </td></tr>
+	 <tr><td>Gear It Forward</td><td>2338</td><td>Oswego, IL</td></tr>
+	 <tr><td>Red Pride Robotics</td><td>3487</td><td>Plainfield, IN</td></tr>
+	 <tr><td>PiBotics</td><td>3814</td><td>Florence, KY</td></tr>
+	 <tr><td>South Bend WildBots</td><td>3865</td><td>South Bend, Ind </td></tr>
+	 <tr><td>CyberTooth</td><td>3940</td><td>Kokomo, IN</td></tr>
+	 <tr><td>Ctrl-Z</td><td>4096</td><td>Champaign, IL</td></tr>
+	 <tr><td>ScotBot</td><td>4284</td><td>Cincinnati, OH</td></tr>
+	 <tr><td>Tribe Tech Robotics</td><td>4485</td><td>Danville, IN</td></tr>
+	 <tr><td>GalacTech </td><td>4926</td><td>Columbus, IN</td></tr>
+	 <tr><td>Iron Giants </td><td>5069</td><td>Edwardsburg, MI</td></tr>
+	 <tr><td>Career Academy South Bend</td><td>5484</td><td>South Bend, IN</td></tr>
+	 <tr><td>WolfByte</td><td>5822</td><td>Chicago, IL</td></tr>
+	 <tr><td>Wired Warriors</td><td>6451</td><td>Whiteland, IN</td></tr>
+	 <tr><td>VOLTEC Robotics</td><td>6647</td><td>Monterrey, NL</td></tr>
+	 <tr><td>Trailblazer Robotics</td><td>6721</td><td>Indianapolis, IN</td></tr>
+	 <tr><td>SHAM-ROCK-BOTICS</td><td>6956</td><td>Westfield, IN</td></tr>
+	 <tr><td>NOS</td><td>7432</td><td>Loretto,MN</td></tr>
+	</tbody></table>
 
-  <p>* denotes team bringing a second robot</p>
+  
     </div>
 </section>   
 
