Update Team Social Info for B3

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -41,6 +41,7 @@ dark: true
         <br />
         6:00pm-10:00pm Team Social
         <br />
+		<br />
         <b>Saturday, October 27th</b>
         <br />
         7:15am Doors Open
@@ -59,28 +60,48 @@ dark: true
         3:00-5:30pm Elimination Matches
         <br />
         6:00pm-6:45pm Awards and Closing Ceremonies
-      <!--  
-        <h2>Team Social</h2>
+              <h2>Team Social</h2>
         <hr class="medium-hr thin" />
         <br />
-        The team social will take place on Friday, November 10th from 6:00-10:00pm. The social will cost $7.50 per person attending and will include...
+        The team social will take place on Friday, October 26th from 6:00-10:00pm. The social will cost $10* per person attending and will include Coldstone Ice Cream and Pizza.
         <br />
-        - Bowling
+		* $10 paid ahead or $12 at the door
+		<br />
+		<br />
+		<br />
+        6:00 Team welcome
         <br />
-        - Pool (Billiards)
+        6:15-7:15 Scavenger Hunt
+		<br />
+        6:15-6:45 The Floor Is Lava
         <br />
-        - Board Games
+        6:50-7:30 Ninja Tournament
         <br />
-        - A $10 meal ticket for dinner at a Purdue Memorial Union restaurant
+        7:30-8:30: Dinner/Free Roam Activities
         <br />
-        - Campus tours
-        <br />
-        - Fun for all!
+        8:30-9:15: Kahoot Quizzes
+		<br />
+		9:15-10:00: Free Roam Activities
+		<br />
+		<br />
+		<br />
+		Free Roam Activities:
+		<br />
+		-Board Games
+		<br />
+		-Paper Airplane Competition
+		<br />
+		-Free Write Large Paper
+		<br />
+		-Lego Free Build
+		<br />
+		-DJ
+
         </div>
     </div>
 </section>   
 
--->
+
 <section id="teams" class="primary-section">
 <div class="container">
         <h1>2018 Teams</h1>
@@ -88,7 +109,7 @@ dark: true
         <br />
 		
 	  <table class="tableizer-table">
-	<thead><tr class="tableizer-firstrow"><th>Team Name</th><th>Team Number</th><th>Location</th></tr></thead><tbody>
+	<thead><tr class="tableizer-firstrow"><th>Team</th><th>Team Number</th><th>Location</th></tr></thead><tbody>
 	 <tr><td>Penn Robotics</td><td>135</td><td>Mishawaka, IN</td></tr>
 	 <tr><td>Cyber Blue</td><td>234</td><td>Indianapolis, IN</td></tr>
 	 <tr><td>PantherTech</td><td>292</td><td>Russiaville, IN</td></tr>
