--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -157,8 +157,7 @@ dark: true
         <hr />
         <br />
         <div class="center">
-		<iframe src="https://player.twitch.tv/?channel=indianafirst" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe><a href="https://www.twitch.tv/indianafirst?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;">Watch live video from IndianaFIRST on www.twitch.tv</a>
-    </div>
+		<iframe src="https://player.twitch.tv/?channel=indianafirstlive" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe><a href="https://www.twitch.tv/indianafirstlive?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;">Watch live video from indianafirstlive on www.twitch.tv</a>    </div>
 	
 </section>
 
