--- a/frc-kickoff.html
+++ b/frc-kickoff.html
@@ -4,8 +4,8 @@ image: ftc-event.jpg
 title: "FRC Kickoff"
 event-date: "January 5th"
 event-year: "2019"
-location-ntrl: "Neil Armstrong Hall of Engineering Room #1010"
-location: "701 W Stadium Ave, West Lafayette, IN 47907"
+location-ntrl: "Lawson Computer Science Building"
+location: "305 N University St, West Lafayette, IN 47907"
 contact: "president@purduefirst.org"
 dark: true
 ---
