--- a/frc-kickoff.html
+++ b/frc-kickoff.html
@@ -55,11 +55,11 @@ dark: true
     <hr />
     <div class="row">
       <div class="col-md-6">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.997548693844!2d-86.91709418460364!3d40.43105317936348!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2b2d1671247%3A0x6b9370bcda415cfb!2sNeil+Armstrong+Hall+of+Engineering!5e0!3m2!1sen!2sus!4v1535487209258" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>      </div>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.146832657963!2d-86.91915508429358!3d40.427747462892576!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2b38f414285%3A0x32bebf50f0d5a064!2sLawson+(Richard+and+Patricia)+Computer+Science+Building%2C+N+University+St%2C+West+Lafayette%2C+IN+47907!5e0!3m2!1sen!2sus!4v1546547135113" width="400" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
       <div class="col-md-6">
         <h2>Transportation & Parking</h2>
-        <p><strong>Cars, Pickups, and Vans</strong> can park in either the Northwestern (504 Northwestern Avenue) or University (201 N University St) Parking Garage and walk to WALC.</p>
-        <p><strong>Buses</strong> can drop off and pick up on Memorial Mall.  Bus parking is in the large lot north of Ross-Ade stadium.  Brittany Ammerman (609-744-5955) will be available to shuttle ADULT DRIVERS back and forth from the bus parking area.</p>
+        <p><strong>Cars, Pickups, and Vans</strong> can park in either the University (201 N University St) or the Northwestern (504 Northwestern Avenue) Parking Garage and walk to Lawson.</p>
+        <p><strong>Buses</strong> can drop off and pick up on the stree outside Lawson.  Bus parking is in the large lot north of Ross-Ade stadium.  Brittany Ammerman (609-744-5955) will be available to shuttle ADULT DRIVERS back and forth from the bus parking area.</p>
       </div>
     </div>
   </div>
