Updated header message to be less wrong about callout things

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: big-image
 title: "Purdue FIRST Programs"
 mission-title: "Want to Join Us?"
-mission-summary: "Come to our callouts on August 21st and August 23rd, 6PM - 8PM in WALC 1018! Free Pizza! Free Fun!"
+mission-summary: "Contact us below!"
 image: "crossroads-2014.jpg"
 contact: "president@purduefirst.org"
 dark: true
