--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -2,8 +2,8 @@
 layout: event-image
 image: state-2016.jpg
 title: "Boiler Bot Battle"
-event-date: "October 26th-27th"
-event-year: "2018"
+event-date: "November 15th-16th"
+event-year: "2019"
 location: " 355 N Martin Jischke Dr, West Lafayette, IN 47906"
 link: https://goo.gl/forms/QVTVVZy5Yj8joBq83
 location-ntrl: "France A. Córdova Recreational Sports Center"
@@ -17,7 +17,7 @@ dark: true
         <iframe id="ytplayer" type="text/html" width="640" height="390" src="https://www.youtube.com/embed/UemgTq5iEEQ" frameborder="0"></iframe>
         <br />
         <br />
-        Be a part of the third annual Boiler Bot Battle, hosted at Purdue University by Purdue FIRST Programs. Join us at the Purdue Corec on October 26th and 27th for robots, campus tours, social events, and much more. Check back to this page for frequent updates, and we hope to see you in October!
+        Be a part of the fourth annual Boiler Bot Battle, hosted at Purdue University by Purdue FIRST Programs. Join us at the Purdue Corec on November 15th and 16th for robots, campus tours, social events, and much more. Check back to this page for frequent updates, and we hope to see you in November!
 
     <br>
     <hr class="medium-hr thin" />
@@ -25,13 +25,13 @@ dark: true
 	Got questions about the event? Send them to <a href="mailto:boilerbotbattle@gmail.com">boilerbotbattle@gmail.com</a>!
     </div>
 </section>
-        
+
 <section id="schedule" class="primary-section">
 <div class="container">
-        <h1>Schedule</h1>
+        <h1>Schedule Coming Soon!</h1>
         <hr />
         <br />
-        <div class="center">
+        <!-- <div class="center">
             <hr class="medium-hr thin" />
         <br />
 
@@ -97,9 +97,9 @@ dark: true
 		<br />
 		-DJ
 
-        </div>
+        </div> -->
     </div>
-</section>   
+</section>
 
 
 <section id="teams" class="primary-section">
@@ -111,7 +111,7 @@ dark: true
         <h1>2018 Teams</h1>
         <hr />
         <br />
-		
+
 	  <table class="tableizer-table">
 	<thead><tr class="tableizer-firstrow"><th>Team</th><th>Team Number</th><th>Location</th></tr></thead><tbody>
 	 <tr><td>Penn Robotics</td><td>135</td><td>Mishawaka, IN</td></tr>
@@ -143,9 +143,9 @@ dark: true
 	 <tr><td>NOS</td><td>7432</td><td>Loretto,MN</td></tr>
 	</tbody></table>
 
-  
+
     </div>
-</section>   
+</section>
 
 
 
@@ -158,7 +158,7 @@ dark: true
         <br />
         <div class="center">
 		<iframe src="https://player.twitch.tv/?channel=indianafirstlive" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe><a href="https://www.twitch.tv/indianafirstlive?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;">Watch live video from indianafirstlive on www.twitch.tv</a>    </div>
-	
+
 </section>
 
 
@@ -173,5 +173,5 @@ dark: true
         <div class="center">
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.1133787562394!2d-86.92455128460372!3d40.4284882793637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2ca7f76dcf3%3A0x3a6d7e1624033e2e!2sRecreational+Sports+Center%2C+355+N+Martin+Jischke+Dr%2C+West+Lafayette%2C+IN+47906!5e0!3m2!1sen!2sus!4v1532391483327" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>        </div>
     </div>
-	
+
 </section>
