--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -4,9 +4,9 @@ image: state-2016.jpg
 title: "Boiler Bot Battle"
 event-date: "November 15th-16th"
 event-year: "2019"
-location: " 355 N Martin Jischke Dr, West Lafayette, IN 47906"
+location: "812 3rd Street, West Lafayette, IN 47907"
 link: https://goo.gl/forms/8Mih3mMBiRA7JMC37
-location-ntrl: "France A. Córdova Recreational Sports Center"
+location-ntrl: "Purdue University Armory"
 contact: "boilerbotbattle@gmail.com"
 dark: true
 ---
@@ -14,10 +14,10 @@ dark: true
     <div class="container">
         <h1>About</h1>
         <hr />
-        <iframe id="ytplayer" type="text/html" width="640" height="390" src="https://www.youtube.com/embed/UemgTq5iEEQ" frameborder="0"></iframe>
+        <iframe id="ytplayer" type="text/html" width="640" height="390" src="https://www.youtube.com/embed/YcEoE-SJ8OE" frameborder="0"></iframe>
         <br />
         <br />
-        Be a part of the fourth annual Boiler Bot Battle, hosted at Purdue University by Purdue FIRST Programs. Join us at the Purdue Corec on November 15th and 16th for robots, campus tours, social events, and much more. Check back to this page for frequent updates, and we hope to see you in November!
+        Be a part of the fourth annual Boiler Bot Battle, hosted at Purdue University by Purdue FIRST Programs. Join us at the Purdue Armory on November 15th and 16th for robots, campus tours, social events, and much more. Check back to this page for frequent updates, and we hope to see you in November!
 
     <br>
     <hr class="medium-hr thin" />
@@ -102,7 +102,7 @@ dark: true
 </section>
 
 
-<section id="teams" class="primary-section">
+<!-- <section id="teams" class="primary-section">
 <div class="container">
 	<br />
 	<br />
@@ -145,7 +145,7 @@ dark: true
 
 
     </div>
-</section>
+</section> -->
 
 
 
@@ -171,7 +171,7 @@ dark: true
         <hr />
         <br />
         <div class="center">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3037.1133787562394!2d-86.92455128460372!3d40.4284882793637!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2ca7f76dcf3%3A0x3a6d7e1624033e2e!2sRecreational+Sports+Center%2C+355+N+Martin+Jischke+Dr%2C+West+Lafayette%2C+IN+47906!5e0!3m2!1sen!2sus!4v1532391483327" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>        </div>
-    </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2002.590734024036!2d-86.91866526050549!3d40.428480359435476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2b3990678b9%3A0x11dcd5ecb4889da9!2sArmory%2C%20812%203rd%20Street%2C%20West%20Lafayette%2C%20IN%2047907!5e0!3m2!1sen!2sus!4v1569080406406!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
 
 </section>
