Updated fll and b3 info pages

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -5,7 +5,7 @@ title: "Boiler Bot Battle"
 event-date: "November 15th-16th"
 event-year: "2019"
 location: "812 3rd Street, West Lafayette, IN 47907"
-link: https://goo.gl/forms/8Mih3mMBiRA7JMC37
+link: https://forms.gle/NaFjWxBYwgHV3fkz7
 location-ntrl: "Purdue University Armory"
 contact: "boilerbotbattle@gmail.com"
 dark: true
