--- a/purdue-forums.html
+++ b/purdue-forums.html
@@ -4,6 +4,7 @@ image: arch.jpg
 title: "Purdue First Forums"
 event-date: "October 19th"
 event-year: "2019"
+link: https://purdue.ca1.qualtrics.com/jfe/form/SV_bHoJbU21iStpa9T
 location: "701 W Stadium Ave, West Lafayette, IN 47907"
 location-ntrl: "Neil Armstrong Hall of Engineering"
 dark: true
@@ -38,11 +39,13 @@ dark: true
         <hr class="medium-hr thin" />
         <br />
 
-        <b>Saturday, October 19th</b>
+        <h4><b>Saturday, October 19th</b></h4>
+        <hr class="medium-hr thin" />
         <br />
-        7:30am - 8:30am Check-in, Armstrong Atrium
+        <h4><b>FRC</b></h4>
+        7:30am - 8:30am -- Check-in, Armstrong Atrium
         <br />
-        8:30am - 9:50am Welcome meeting, ARMS 1010
+        8:30am - 8:50am -- Welcome meeting, ARMS 1010
         <br />
         9:00am - 9:50am  -- Various sessions in ARMS, PHYS, and FRNY
         <br />
@@ -55,7 +58,7 @@ dark: true
         <br />
         <hr class="medium-hr thin" />
         <br />
-        12:50pm - 2:20pm Lunch
+        12:50pm - 2:20pm -- Lunch
         <br />
         <br />
         <hr class="medium-hr thin" />
@@ -63,6 +66,35 @@ dark: true
         2:30pm - 3:20pm -- Various sessions in ARMS, PHYS, and FRNY
         <br />
         3:30pm - 4:20pm
+        <br />
+        <br />
+        <hr class="medium-hr thin" />
+        <br />
+        <h4><b>FTC</b></h4>
+        7:30am - 8:30am -- Check-in, Armstrong Atrium
+        <br />
+        8:30am - 8:50am -- Welcome meeting, ARMS 1010
+        <br />
+        9:00am - 9:50am  -- Various sessions in ARMS, PHYS, and FRNY
+        <br />
+        10:00am - 10:50am
+        <br />
+        11:00am - 11:50am
+        <br />
+        12:00pm - 12:50pm
+        <br />
+        <br />
+        1:00pm - 1:50pm
+        <br />
+        <br />
+        <hr class="medium-hr thin" />
+        <br />
+        1:50pm - 3:20pm -- Lunch
+        <br />
+        <br />
+        <hr class="medium-hr thin" />
+        <br />
+        3:30pm - 4:20pm -- Various sessions in ARMS, PHYS, and FRNY
         <br />
         <br />
 
