Moved to new schedule with better table

--- a/purdue-forums.html
+++ b/purdue-forums.html
@@ -35,70 +35,76 @@ dark: true
       <br />
 
       <br />
-      <div class="center" style="height: auto;">
+      <div class="left" style="height: auto;">
         <hr class="medium-hr thin" />
         <br />
 
         <h4><b>Saturday, October 19th</b></h4>
-        <hr class="medium-hr thin" />
-        <br />
-        <h4><b>FTC</b></h4>
-        7:30am - 8:30am -- Check-in, Armstrong Atrium
-        <br />
-        8:30am - 8:50am -- Welcome meeting, ARMS 1010
-        <br />
-        9:00am - 9:50am  -- Various sessions in ARMS, PHYS, and FRNY
-        <br />
-        10:00am - 10:50am
-        <br />
-        11:00am - 11:50am
-        <br />
-        12:00pm - 12:50pm
-        <br />
-        <br />
-        <hr class="medium-hr thin" />
-        <br />
-        12:50pm - 2:20pm -- Lunch
-        <br />
-        <br />
-        <hr class="medium-hr thin" />
-        <br />
-        2:30pm - 3:20pm -- Various sessions in ARMS, PHYS, and FRNY
-        <br />
-        3:30pm - 4:20pm
-        <br />
-        <br />
-        <hr class="medium-hr thin" />
-        <br />
-        <h4><b>FRC</b></h4>
-        7:30am - 8:30am -- Check-in, Armstrong Atrium
-        <br />
-        8:30am - 8:50am -- Welcome meeting, ARMS 1010
-        <br />
-        9:00am - 9:50am  -- Various sessions in ARMS, PHYS, and FRNY
-        <br />
-        10:00am - 10:50am
-        <br />
-        11:00am - 11:50am
-        <br />
-        12:00pm - 12:50pm
-        <br />
-        <br />
-        1:00pm - 1:50pm
-        <br />
-        <br />
-        <hr class="medium-hr thin" />
-        <br />
-        1:50pm - 3:20pm -- Lunch
-        <br />
-        <br />
-        <hr class="medium-hr thin" />
-        <br />
-        3:30pm - 4:20pm -- Various sessions in ARMS, PHYS, and FRNY
-        <br />
-        <br />
+
+        <div class="table-responsive">
+          <table class="table" style="text-align: center;">
+            <tr>
+              <td><b>Time</b></td>
+              <td><b>FRC Teams</b></td>
+              <td><b>FTC Teams</b></td>
+            </tr>
+            <tr>
+              <td>7:30 AM</td>
+              <td colspan="2">Doors Open</td>
+           </tr>
+           <tr>
+             <td>8:30 AM - 8:50 AM</td>
+             <td>FRNY G140</td>
+             <td>ARMS B061</td>
+           </tr>
+           <tr>
+             <td colspan="3"><b>Welcome & Announcements</b></td>
+           </tr>
+           <tr>
+             <td>9:00 AM - 9:50 AM</td>
+             <td colspan="2"> Session 1</td>
+             <!-- <td> Session 1</td> -->
+           </tr>
+           <tr>
+             <td>
+              10:00 AM - 10:50 AM
+             </td>
+            <td colspan="2">
+              Session 2
+            </td>
+          </tr>
+          <tr>
+            <td>11:00 AM - 11:50 AM</td>
+            <td colspan="2">Session 3</td>
+          </tr>
+          <tr>
+            <td>12:00 PM - 12:50 PM</td>
+            <td>Session 4</td>
+            <td>Lunch Break</td>
+          </tr>
+          <tr>
+            <td>1:00 PM - 1:50 PM</td>
+            <td>Lunch Break</td>
+            <td>Session 5</td>
+          </tr>
+          <tr>
+            <td>2:00 PM - 2:50 PM</td>
+            <td colspan="2">Session 6</td>
+          </tr>
+          <tr>
+            <td>3:00 PM - 3:50 PM</td>
+            <td colspan="2">Session 7</td>
+          </tr>
+          </table>
+        </div>
 
     </div>
 
 
 </section>
+
+<style scoped>
+   th, td {
+     border: 1px solid black;
+  }
+</style>
