--- a/purdue-forums.html
+++ b/purdue-forums.html
@@ -30,77 +30,7 @@ dark: true
 <section id="schedule" class="primary-section">
     <div class="container">
       <h2>Schedule</h2>
-      <hr />
-        Schedule of workshops is yet to come! But here's how the day will look:
-      <br />
-
-      <br />
-      <div class="left" style="height: auto;">
-        <hr class="medium-hr thin" />
-        <br />
-
-        <h4><b>Saturday, October 19th</b></h4>
-
-        <div class="table-responsive">
-          <table class="table" style="text-align: center;">
-            <tr>
-              <td><b>Time</b></td>
-              <td><b>FRC Teams</b></td>
-              <td><b>FTC Teams</b></td>
-            </tr>
-            <tr>
-              <td>7:30 AM</td>
-              <td colspan="2">Doors Open</td>
-           </tr>
-           <tr>
-             <td>8:30 AM - 8:50 AM</td>
-             <td>FRNY G140</td>
-             <td>ARMS B061</td>
-           </tr>
-           <tr>
-             <td colspan="3"><b>Welcome & Announcements</b></td>
-           </tr>
-           <tr>
-             <td>9:00 AM - 9:50 AM</td>
-             <td colspan="2"> Session 1</td>
-             <!-- <td> Session 1</td> -->
-           </tr>
-           <tr>
-             <td>
-              10:00 AM - 10:50 AM
-             </td>
-            <td colspan="2">
-              Session 2
-            </td>
-          </tr>
-          <tr>
-            <td>11:00 AM - 11:50 AM</td>
-            <td colspan="2">Session 3</td>
-          </tr>
-          <tr>
-            <td>12:00 PM - 12:50 PM</td>
-            <td>Session 4</td>
-            <td>Lunch Break</td>
-          </tr>
-          <tr>
-            <td>1:00 PM - 1:50 PM</td>
-            <td>Lunch Break</td>
-            <td>Session 5</td>
-          </tr>
-          <tr>
-            <td>2:00 PM - 2:50 PM</td>
-            <td colspan="2">Session 6</td>
-          </tr>
-          <tr>
-            <td>3:00 PM - 3:50 PM</td>
-            <td colspan="2">Session 7</td>
-          </tr>
-          </table>
-        </div>
-
-    </div>
-
-
+      <iframe src="https://docs.google.com/document/d/e/2PACX-1vSW00gnILvsz52R9IB3w_niXKizvEztyelkfOaFvH0jcRsVYVwPvyg3-UpScCJ4u-ioexGsCip2_aOT/pub?embedded=true"></iframe>
 </section>
 
 <style scoped>
