--- a/purdue-forums.html
+++ b/purdue-forums.html
@@ -30,6 +30,9 @@ dark: true
 <section id="schedule" class="primary-section">
     <div class="container">
       <h2>Schedule</h2>
+	<hr />
+        Schedule of workshops is yet to come! But here's how the day will look:
+      	<br />
       <iframe src="https://docs.google.com/document/d/e/2PACX-1vSW00gnILvsz52R9IB3w_niXKizvEztyelkfOaFvH0jcRsVYVwPvyg3-UpScCJ4u-ioexGsCip2_aOT/pub?embedded=true"></iframe>
 </section>
 
