--- a/purdue-forums.html
+++ b/purdue-forums.html
@@ -31,9 +31,13 @@ dark: true
     <div class="container">
       <h2>Schedule</h2>
 	<hr />
-        Schedule of workshops is yet to come! But here's how the day will look:
+        Schedule of workshops is here! Please see the document below for the up-to-date schedule.
       	<br />
-      <iframe src="https://docs.google.com/document/d/e/2PACX-1vSW00gnILvsz52R9IB3w_niXKizvEztyelkfOaFvH0jcRsVYVwPvyg3-UpScCJ4u-ioexGsCip2_aOT/pub?embedded=true"></iframe>
+	
+	<body style="margin:0px;padding:0px;overflow:hidden">
+	    <iframe src="https://docs.google.com/document/d/e/2PACX-1vSW00gnILvsz52R9IB3w_niXKizvEztyelkfOaFvH0jcRsVYVwPvyg3-UpScCJ4u-ioexGsCip2_aOT/pub?embedded=true" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
+	</body>
+      
 </section>
 
 <style scoped>
